--- a/Transgenesis/Transgenesis.csproj
+++ b/Transgenesis/Transgenesis.csproj
@@ -45,10 +45,12 @@
   <ItemGroup>
     <Compile Include="AttributeTypes.cs" />
     <Compile Include="ConsoleManager.cs" />
+    <Compile Include="ElementEditor.cs" />
     <Compile Include="Environment.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="HighlightEntry.cs" />
     <Compile Include="IComponent.cs" />
+    <Compile Include="MainMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -57,6 +59,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="TranscendenceExtension.cs" />
+    <Compile Include="TypeEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
