--- a/Transgenesis/Transgenesis.csproj
+++ b/Transgenesis/Transgenesis.csproj
@@ -88,6 +88,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Syntax.cs" />
     <Compile Include="TranscendenceExtension.cs" />
     <Compile Include="TypeEditor.cs" />
   </ItemGroup>
@@ -102,6 +103,7 @@
       <HintPath>..\packages\SadConsole.8.99.0\lib\netstandard2.0\SadConsole.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
