add index to overridden types

--- a/Transgenesis/Transgenesis.csproj
+++ b/Transgenesis/Transgenesis.csproj
@@ -75,6 +75,7 @@
     <Compile Include="AttributeTypes.cs" />
     <Compile Include="ConsoleManager.cs" />
     <Compile Include="ElementEditor.cs" />
+    <Compile Include="ElementFormatter.cs" />
     <Compile Include="Environment.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="HighlightEntry.cs" />
@@ -114,6 +115,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
