--- a/Transgenesis/Transgenesis.csproj
+++ b/Transgenesis/Transgenesis.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
 	<ApplicationManifest>app.manifest</ApplicationManifest>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Transgenesis</RootNamespace>
     <AssemblyName>Transgenesis</AssemblyName>
     <LangVersion>preview</LangVersion>
@@ -59,7 +59,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SadConsole.Host.MonoGame" Version="9.0.0-beta1" />
+    <PackageReference Include="SadConsole.Host.MonoGame" Version="9.2.1" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
