begin implement LispEditor

--- a/Transgenesis/Transgenesis.csproj
+++ b/Transgenesis/Transgenesis.csproj
@@ -76,6 +76,9 @@
     <None Update="Transcendence.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Transgenesis.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
